      removed from Debian. It was optionally used by the uuid plugin.
      (Closes: #615203)
    - Build-conflict with libhal-dev to ensure consistent builds (cf. #615203).
    - Let libcollectdclient-dev replace/break collectd-dev (<< 5.2.0-1)
      because it ships files previously shipped by that package; thanks to
      Andreas Beckmann for reporting this (Closes: #717973).

 -- Sebastian Harl <tokkee@debian.org>  Thu, 02 May 2013 21:22:46 +0200

collectd (5.2.1-1) experimental; urgency=low

  * New upstream release.
  * debian/patches:
    - Removed postgresql_writer_memleak.dpatch -- applied upstream.
  * debian/collectd-utils.install:
    - Install collectd-tg manpage.
  * debian/control:
    - Updated standards-version to 3.9.4 -- no changes.

 -- Sebastian Harl <tokkee@debian.org>  Wed, 30 Jan 2013 21:35:30 +0100

collectd (5.2.0-2) experimental; urgency=low

  * debian/patches:
    - Added postgresql_writer_memleak.dpatch fixing a memory leak in the
      PostgreSQL writer implementation.

 -- Sebastian Harl <tokkee@debian.org>  Thu, 29 Nov 2012 09:09:51 +0100

collectd (5.2.0-1) experimental; urgency=low

  * New upstream release:
    - ping plugin: Don't abort if ping_send fails but report an error only;
      thanks to Bernd Zeimetz for reporting this (Closes: #630683).
    - df plugin: Ignore "rootfs" file-system type to make sure that root
      file-system statistics are only collected once; thanks to Florian La
      Roche for reporting this (Closes: #657122).
    - Fixed parse errors when using (including) empty config files; thanks to
      Reinhard Tartler for reporting this (Closes: #592881).
    New plugins:
    - Aggregate multiple values lists into one: aggregation
    - Query statistics from BSD's packet filter: pf (FreeBSD only)
  * Uploading to experimental because of the Wheezy freeze.
  * debian/control, debian/rules:
    - Build-depend on kfreebsd-kernel-headers (kfreebsd-any only) and disable