@@ -40,6 +40,10 @@ collectd (5.4.0-1) UNRELEASED; urgency=low
     - Let libcollectdclient-dev replace/break collectd-dev (<< 5.2.0-1)
       because it ships files previously shipped by that package; thanks to
       Andreas Beckmann for reporting this (Closes: #717973).
+  * debian/collectd-core.collectd.init.d:
+    - Do not use different PID files for collectd and collectdmon. Else, a
+      process might be left-over after changing USE_COLLECTDMON and restarting
+      collectd. Thanks to Dennis Hoppe for reporting this (Closes: #704048).
 
  -- Sebastian Harl <tokkee@debian.org>  Thu, 02 May 2013 21:22:46 +0200
 
